--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,12 @@
             <artifactId>lombok</artifactId>
             <version>1.16.16</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
 
     </dependencies>
     <build>
