--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -83,9 +83,10 @@
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>*.do</url-pattern>
     </servlet-mapping>
-
-
     <!--spring mvc end-->
+    <listener>
+        <listener-class>org.springframework.web.context.request.RequestContextListener </listener-class>
+    </listener>
 
 </web-app>
         
